# RR

./: .gitattributes  .gitignore  CC  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  bouncing_ball.rr  build.rs  dist-workspace.toml
.github/: CODEOWNERS  FUNDING.yml  dist-build-setup.yml  pull_request_template.md
docs/: README.md  cli.md  compatibility.md  compiler-pipeline.md  configuration.md  contributing-audit.md  getting-started.md  index.md  ir-model.md  language.md  optimization.md  package-manager-design.md  package.json  pnpm-lock.yaml  r-for-r-users.md  r-interop.md  runtime-and-errors.md  testing.md  whats-new-2.0.md  writing-rr.md
example/: README.md  tesseract.rr
fuzz/: Cargo.toml
fuzz/artifacts/pipeline/: crash-8c4608121ff53550b7e45036c90325c1704deba6
fuzz/corpus/error_diagnostics/: seed_02
fuzz/corpus/generated_pipeline/: .gitignore  seed_02
fuzz/corpus/incremental_compile/: seed_00.rr  seed_importish.rr
fuzz/corpus/parser/: seed_00.rr  seed_01_typed_generics.rr
fuzz/corpus/pipeline/: seed_00.rr  seed_01_intrinsic_and_guards.rr  seed_examples_simulation.rr
fuzz/corpus/type_solver/: seed_00.rr
fuzz/corpus_smoke/error_diagnostics/: seed_01
fuzz/corpus_smoke/generated_pipeline/: seed_03  seed_04
fuzz/corpus_smoke/incremental_compile/: seed_00.rr  seed_simulation.rr
fuzz/corpus_smoke/parser/: seed_01_typed_generics.rr
fuzz/corpus_smoke/pipeline/: seed_01_intrinsic_and_guards.rr
fuzz/corpus_smoke/type_solver/: seed_examples_types.rr
fuzz/dictionaries/: rr.dict
fuzz/fuzz_targets/: common.rs  error_diagnostics.rs  generated_pipeline.rs  incremental.rs  parser.rs  pipeline.rs  type_solver.rs
native/: Makevars  rr_native.c
policy/: contributing_rules 2.toml  contributing_rules.toml  perf_budget.txt  perf_delta_thresholds.txt  required_ci_checks 2.txt  subsystems 2.toml  subsystems.toml  warning_baseline 2.txt  warning_baseline.txt
proof/: README.md  optimizer_correspondence.md  optimizer_proof_gap_audit.md  pipeline_correspondence.md  runtime_safety_correspondence.md  verify_correspondence.md
scripts/: bench_backend_candidates.py  bench_diffusion_backends.py  bench_examples.sh  bench_signal_pipeline.py  bench_signal_pipeline_docs_slice.py  bench_signal_pipeline_memory.py  bench_tesseract.py  bench_utils.py  build_failure_bundle.pl  check_commit_metadata.pl  check_commit_series.pl  check_new_warnings.pl  check_pr_evidence.py  check_required_ci_jobs.pl  check_subsystem_ownership.pl  check_subsystem_reviews.pl  ci_contributing_audit.sh  ci_contributing_semantic_audit.sh  contributing_audit.pl  (+27 more)
(+1638 files in other folders)
