[package]
name = "RR"
version = "9.0.0"
edition = "2024"
authors = ["Feral"]
description = "The RR Compiler"
repository = "https://github.com/Feralthedogg/RR"
license = "MIT"
keywords = ["compiler", "r-language", "optimization", "static-analysis"]
categories = ["compilers", "science", "development-tools"]

[workspace]
members = [".", "fuzz"]
default-members = ["."]

[dependencies]
regex = "1.12.3"
rustc-hash = "2.1.1"
rayon = "1.11.0"
hmac = "0.12.1"
sha2 = "0.10.9"
ed25519-dalek = "2.1.1"
getrandom = "0.2.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
