[package]
name = "RR"
version = "1.2.0"
edition = "2024"
authors = ["Feral"]
description = "The RR Compiler"
repository = "https://github.com/Feralthedogg/RR"
license = "MIT"
keywords = ["compiler", "r-language", "optimization", "static-analysis"]
categories = ["compilers", "science", "development-tools"]

[package.metadata.wix]
upgrade-guid = "AC34955C-4FEF-46F3-9AC1-7F2C1FC8937D"
path-guid = "558EB98E-D5A0-440F-AF67-385387E39235"
license = false
eula = false

[workspace]
members = [".", "fuzz"]
default-members = ["."]

[dependencies]
regex = "1.12.3"
rustc-hash = "2.1.1"
rayon = "1.11.0"
hmac = "0.12.1"
sha2 = "0.10.9"
ed25519-dalek = "2.1.1"
getrandom = "0.2.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
