[package]
name = "rr-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rustc-hash = "2"

[dependencies.RR]
path = ".."
features = ["fuzz-internals"]

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pipeline"
path = "fuzz_targets/pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "type_solver"
path = "fuzz_targets/type_solver.rs"
test = false
doc = false
bench = false

[[bin]]
name = "incremental_compile"
path = "fuzz_targets/incremental.rs"
test = false
doc = false
bench = false

[[bin]]
name = "generated_pipeline"
path = "fuzz_targets/generated_pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "error_diagnostics"
path = "fuzz_targets/error_diagnostics.rs"
test = false
doc = false
bench = false
